# Lms

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: .env.example  container.py  settings.py
docker/: Dockerfile  docker-compose.yml
entrypoint/: main.py
internal/exceptions/: application_exception.py
internal/exceptions/identity/: email_not_found_exception.py  email_not_verified_exception.py  password_mismatch_exception.py  user_already_exists_exception.py  user_not_found.py  user_not_verified_exception.py
internal/handlers/identity/: exception_handlers.py  handlers.py
internal/handlers/identity/schema/: register_response_schema.py  register_schema.py  token_pair_schema.py  verification_response_schema.py
internal/infrastructure/postgresql/: database.py
internal/infrastructure/postgresql/repositories/: notification_repository.py  token_repository.py  user_repository.py
internal/infrastructure/redis/: redis_client.py
internal/models/identity/: refresh_token.py  user.py
internal/models/social/: notification_template.py
internal/models/social/enums/: notification_type.py
internal/services/identity/: auth_service.py  user_service.py
internal/services/social/: notification_service.py
internal/usecase/identity/: login_usecase.py  register_usecase.py  verify_email_usecase.py
src/web/: main.py
src/web/config/: .env.example
